# video-down

./: .gitignore  .release-it.json  BUILD_GUIDE.md  CHANGELOG.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: README.md  build-artifacts.yml  build-release.yml  build-test.yml  build.yml  release.yml
docs/: README.md  RELEASE_GUIDE.md
docs/guides/: YOUTUBE_BROWSER_COOKIE_IMPLEMENTATION.md  YOUTUBE_DOWNLOAD_GUIDE.md
scripts/: build-clean.ps1  dev-clean.ps1  download-ytdlp.ps1  setup-git-hooks.ps1  sync-version.js
scripts/test/: test-browser-cookie.ps1  test-youtube-cookie.ps1  test-ytdlp-direct.ps1
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  MACOS_ICON_GUIDE.md  README.md
src-tauri/proptest-regressions/services/: history_service.txt  ytdlp_service.txt
src-tauri/resources/: .gitkeep  README.md
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  download.rs  fs.rs  history.rs  mod.rs  update.rs
src-tauri/src/models/: config.rs  download_task.rs  history.rs  mod.rs  progress.rs  update.rs  video_info.rs
src-tauri/src/services/: config_service.rs  history_service.rs  mod.rs  update_service.rs  ytdlp_service.rs
src-tauri/src/utils/: fs.rs  mod.rs
src/components/: ERROR_HANDLING_GUIDE.md  ErrorDialog.test.tsx  ErrorDialog.tsx
src/hooks/: use-error-handler.test.ts  use-error-handler.ts  use-toast.ts
src/services/: .gitkeep  index.ts  tauriApi.ts
(+43 files in other folders)
